03-ingress/rabbit-mq-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rabbit-dashboard
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: rabbit-dashboard.mgmworkshop.com
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbit-mq
              servicePort: 15672
