03-ingress/web-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-route
  namespace: demo # TODO: change namespace
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo.mgmworkshop.com`)
      kind: Rule
      services:
        - name: web-service
          port: 80
  tls:
    certResolver: default
